<resources>
    <string name="app_name">AndWallet</string>
    <string name="label">Label</string>
    <string name="amount">Amount ($)</string>
    <string name="income">Income</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete All</string>
    <string name="balance">Balance</string>
    <string name="_0">0</string>
    <string name="dollar_sign">$</string>
    <string name="summary">Summary</string>
    <string name="andwallet">AndWallet</string>
    <string name="blurb">Your current balance, summarized</string>
    <string name="income_label">Income:</string>
    <string name="expenses_label">Expenditures:</string>
    <string name="balance_label">Balance:</string>
    <string name="pin_prompt">Enter your pin</string>
    <string name="go">Go</string>
</resources>
